[bdist_wheel]
universal = 1

[metadata]
name = async_metrics
version = attr: async_metrics.__version__
author = Alexandre Menezes
author_email = alexandre.fmenezes@gmail.com
description = simple metrics for your app
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
url = https://github.com/amenezes/async_metrics
project_urls =
  Documentation = https://github.com/amenezes/async_metrics
  Code = https://github.com/amenezes/async_metrics
  Issue tracker = https://github.com/amenezes/async_metrics/issues
  Changes = https://github.com/amenezes/async_metrics/releases
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: AsyncIO
  Framework :: Flask
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries
keywords = ['asyncio', 'metrics']

[options]
packages = find:
install_requires =
  psutil >= 5.7.3
python_requires = >= 3.8

[options.extras_require]
cli = click>=8.1.3; rich>=12.6.0; requests>=2.28.2

[flake8]
exclude = venv
          *__pycache__*
          *.pyc
          *__main__.py*
          *__init__.py*
ignore = E501
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[mypy]
platform=linux

files = async_metrics
show_error_context = True
verbosity = 0
ignore_missing_imports = True
no_implicit_optional = True

warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True

[tox:tox]
envlist = py{38,39,310, 311}

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make ci

[tool:pytest]
testpaths = tests
asyncio_mode = auto
